test/acceptance/parsing/failing/include-infinite-loop.js
'use strict';

module.exports = require('spun-util').errors.parsing.InfiniteIncludeError;
